# manga-db

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  idea.md  pyproject.toml
data/: anilist_data.jsonl  dim_manga.csv  dim_volume.csv
src/extractor/: download_mokuro.py
src/mokuro_reader/: reader.py  transform.py
src/streamlit/: add_analytics.py  entrypoint.py  general_view.py  home_view.py  manga_view.py  view.py
src/utils/: anilist.py  builder.py  kitsu.py
