[project]
name = "mokuro-manga-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.2",
    "jupyter>=1.1.1",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
]
